[package]
name = "chatgpt_console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0" # Check https://crates.io/crates/dotenv for the latest version
# Optional, for compile-time loading
dotenv_codegen = "0.15.0"
clipboard = "0.5"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
crossterm = "0.23.0" 
async-stream = "0.3"

# [dependencies.reqwest]
# version = "0.11"  # Make sure to use the correct version you're working with
# features = ["json"]

[dependencies.anyhow]
anyhow = "1.0"  # Check crates.io for the latest version
